Fix offscreen sticky footer when logged in

--- a/resources/scss/layout/_main.scss
+++ b/resources/scss/layout/_main.scss
@@ -30,4 +30,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+
+	.auth & {
+		min-height: calc(100vh - #{$page-auth-height});
+	}
 }
